--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -299,6 +299,7 @@ header {
     font-weight: bold;
 }
 
+
 .color-black {
     color: var(--black);
     margin-bottom: 15px;
@@ -308,6 +309,11 @@ header {
     cursor: pointer;
     font-size: 1.5em;
     padding-right: 10px;
+
+}
+.fab:hover {
+    transform: scale(1.2);
+    transition: .3s;
 }
 
 .fa-twitter {
@@ -1180,7 +1186,7 @@ h2 {
     position: relative;
 }
 
-.headParents img {
+.headParents img, .headPros img {
     position: absolute;
     width: 100%;
     height: 70px;
@@ -1727,11 +1733,11 @@ h2 {
     border-radius: 10px;
     padding: 10px;
     margin-top: 15px;
+    cursor: pointer;
 }
 
 .btnprofil:hover {
     color: var(--white);
-    /* font-weight: bold; */
     background-color: var(--violet-light);
     transition: 1s;
 }
@@ -1750,14 +1756,6 @@ h2 {
     justify-content: center;
     flex-direction: column;
     position: relative;
-}
-
-.headPros img {
-    position: absolute;
-    width: 100%;
-    height: 70px;
-    text-align: center;
-    top: 0px;
 }
 
 .btnPros {
@@ -1961,3 +1959,101 @@ input[type="checkbox"] {
 }
 /* PROFIL PARENTS - PROS*/
 
+/* DISPONIBILITE ============================================= */
+/* .dispo{
+    height: 100%;
+} */
+.form-dispo-container{
+    background-color: var(--blue-btn);
+    padding-bottom: 30%;
+}
+#dispo{
+    position: relative;
+}
+.dispo img{
+    position: relative;
+    width: 100%;
+    height: 70px;
+    text-align: center;
+    top: 0px;
+}
+.dispo-title{
+    background-color: #8882ff;
+    padding: 30px;
+}
+
+.dispo h1{
+    text-align: center;
+    margin-top: 20px;
+    color: var(--white);
+}
+
+.calendar-pros{
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+}
+.calendar-pros-top{
+    margin-bottom: 60px;
+}
+.calendar-style{
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    border-radius: 20px;
+    padding: 10px 20px;
+}
+
+/* body.embeddedCalendar{
+    display: flex;
+    justify-content: center;
+} */
+
+
+
+
+
+/* FACTURE MODAL ================================================ */
+
+/* The Modal (background) */
+.facture-modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.facture-modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.facture-close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.facture-close:hover,
+.facture-close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.facture-text{
+    text-align: center;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+}
