--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -2057,3 +2057,24 @@ input[type="checkbox"] {
     text-transform: uppercase;
     margin-bottom: 30px;
 }
+
+.facture-header{
+    text-align: center;
+    font-weight: var(--bold);
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+
+
+
+/* .facture{ */
+    /* height: 10%; */
+    /* width: 10%; */
+/* } */
+
+
+table, th, td {
+    border: 1px solid black;
+    padding: 10px 20px;
+}
