--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -2471,10 +2471,21 @@ input[type="checkbox"] {
 
 /* FORMULAIRE RESERVATION ===================================================== */
 
-.section-form-reservation{
-    height: 100%;
-    margin-bottom: 20px;
+.modalValidReservation{
+    display: none;
+    width: 40%;
+    max-height: 80%;
+    padding: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+    background-color: #fff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
 }
+
 .reservation-header, .fa-bookmark{
     text-align: center;
     color: var(--blue-btn);
@@ -2483,34 +2494,51 @@ input[type="checkbox"] {
 }
 
 .form-reservation-container{
-    background-color: var(--white-cream);
+    display: flex;
+    /* align-items: center; */
+    justify-content: space-between;
+    /* background-color: var(--white-cream); */
 }
 .form-reservation{
     padding: 30px;
     display: flex;
+
+}
+.reservation-left{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.reservation-right{
+    display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
+
 .input-kid{
     margin-bottom: 30px;
 }
 .file-kid{
-    margin-bottom: 25px;
+    margin-bottom: 30px;
 }
 .label-kid{
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 #form-reservation input{
-    border: none;
     border-radius: 10px;
     padding: 10px 20px;
 }
+
+.reservation-left input{
+    border: 1px solid rgba(0, 0, 0, 0.281);
+}
 #form-reservation textarea{
-    width: 50%;
+    width: 150%;
     height: 150px;
     background: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.12);
+    border: 1px solid rgba(0, 0, 0, 0.281);
     box-sizing: border-box;
     border-radius: 10px;
     margin-bottom: 30px;
@@ -2524,17 +2552,32 @@ input[type="checkbox"] {
 }
 
 #submit-kid[type="submit"]{
-    width: 10%;
+    width: 50%;
     margin-top: 10px;
     border: 1px solid rgba(0, 0, 0, 0.12);
     border-radius: 10px;
     color: var(--white);
-    background-color: var(--blue-btn);
+    background-color: var(--violet-light);
     cursor: pointer;
 }
+#submit-kid[type="submit"]:hover{
+    background-color: var(--violet);
+}
 
-
-
+.validmodalbtn{
+    width: 50%;
+    margin-top: 10px;
+    padding: 10px;
+    font-size: 15px;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    border-radius: 10px;
+    color: var(--white);
+    background-color: #8882ff;
+    cursor: pointer;
+}
+.validmodalbtn:hover{
+    background-color: var(--blue-btn);
+}
 
 /* PROFIL PARENTS - PROS*/
 
