--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -2008,23 +2008,19 @@ input[type="checkbox"] {
 } */
 
 
-
-
-
 /* FACTURE MODAL ================================================ */
 
 /* The Modal (background) */
 .facture-modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none; 
+  position: fixed;
+   z-index: 1; 
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+   width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgba(0,0,0,0.4);
 }
 
 /* Modal Content/Box */
@@ -2065,16 +2061,31 @@ input[type="checkbox"] {
     text-transform: uppercase;
 }
 
-
-
-
+.facture-text-right{
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+}
+.facture-body{
+    margin-bottom: 60px;
+}
+.facture-text-left{
+    margin-bottom: 10px;
+}
+.facture-text-left li{
+    margin-bottom: 5px;
+}
+.info-client li{
+    margin-bottom: 5px;
+}
 /* .facture{ */
     /* height: 10%; */
-    /* width: 10%; */
-/* } */
+    /* width: 10%;
+} */
 
 
 table, th, td {
     border: 1px solid black;
     padding: 10px 20px;
+    margin-bottom: 20px;
 }
