--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -1457,8 +1457,8 @@ textarea[name=pro_content] {
 .modalPayment {
     display: none;
     width: 60%;
-    height: 70%;
-    padding: 30px;
+    height: auto;
+    padding: 30px 10px 70px 10px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -1565,7 +1565,7 @@ textarea[name=pro_content] {
     width: 100%;
     max-width: 400px;
     max-height: 251px;
-    height: 54vw;
+    height: 50vw;
     padding: 20px;
 }
 
@@ -1940,7 +1940,7 @@ textarea[name=pro_content] {
 .modalProfil, .modalValid {
     display: none;
     width: 410px;
-    max-height: 80%;
+    /* max-height: 80%; */
     padding: 30px;
     position: absolute;
     top: 50%;
@@ -2483,15 +2483,21 @@ table, th, td {
     .card {
         margin: 10px 0;
     }
+    .rightInfoCard {
+        width: auto;
+    }
+    .phoneCard {
+        margin-right: 5%;
+    }
 }
 
 @media screen and (max-width: 1065px) {
     .img-vector-top {
         display: none;
     }
-    .btnInfo a.phoneCard, .btnInfo p.price {
+    /* .btnInfo a.phoneCard, .btnInfo p.price {
         display: none;
-    }
+    } */
     .btn-job {
         margin-bottom: 50px;
     }
@@ -2543,9 +2549,10 @@ table, th, td {
     .btnInfo {
         flex-direction: column;
         align-items: center;
+        margin-top: 5%;
     }
     .btnInfo a {
-        margin: 5px auto;
+        margin: 5px 5% 0 0;
     }
     .sendCard {
         padding: 5px 5px;
@@ -2558,6 +2565,12 @@ table, th, td {
     }
     #form_map {
         flex-direction: column;
+    }
+    .modalProfil, .modalPayment {
+        top: 100%;
+    }
+    .modalPayment {
+        width: 90%;
     }
 }
 
@@ -2647,9 +2660,9 @@ table, th, td {
     .cardSearch {
         width: 100%;
     }
-    .proCard {
+    /* .proCard {
         width: 100%;
-    }
+    } */
     #map {
         width: 100%;
     }
