--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -237,6 +237,7 @@ header {
 
 .nav a {
     color: var(--black);
+    transition: 0s;
 }
 
 .nav a.btn {
@@ -245,7 +246,7 @@ header {
 
 .nav a:hover {
     font-weight: 600;
-    transition: .5s;
+    transition-duration: .5s;
 }
 
 .nav ul {
@@ -588,7 +589,6 @@ div.hideCategory {
 .btn-job {
     text-align: center;
     margin-top: 100px;
-    /* margin-bottom: 100px; */
 }
 
 .go {
@@ -1305,10 +1305,6 @@ textarea[name=pro_content] {
     box-shadow: -8px -4px 8px 0px #ffffff, 8px 4px 12px 0px #d1d9e6, 4px 4px 4px 0px #d1d9e6 inset, -4px -4px 4px 0px #ffffff inset;
 }
 
-/* .toggle-type{
-    display: none;
-}  */
-
 .indicator {
     height: 100%;
     width: 200%;
@@ -1322,10 +1318,6 @@ textarea[name=pro_content] {
 .toggle-map:checked~.indicator {
     transform: translate3d(25%, 0, 0);
 }
-
-/* .toggle-type:checked~.indicator {
-    transform: translate3d(25%, 0, 0);
-} */
 
 .cardMap {
     width: 100%;
@@ -1423,6 +1415,8 @@ textarea[name=pro_content] {
     border-radius: 10px;
     padding: 0 10px;
     color: var(--violet-light);
+    display: flex;
+    align-items: center;
 }
 
 .sendCard:hover {
@@ -1448,6 +1442,10 @@ textarea[name=pro_content] {
     display: flex;
     align-items: center;
     color: var(--white);
+}
+
+#select_adresse {
+    max-width: 20%;
 }
 
 /* MAP */
@@ -1835,7 +1833,6 @@ textarea[name=pro_content] {
     font-size: 25px;
     line-height: 30px;
     text-align: center;
-    /* margin: 40px 0; */
 }
 
 .dash-sheet {
@@ -1844,12 +1841,27 @@ textarea[name=pro_content] {
     padding: 20px 15px;
     background: var(--white);
     border-radius: 10px;
-    /* position: absolute; */
+}
+
+.dash-sheetPro {
+    width: 100%;
+    height: auto;
+    padding: 20px 15px;
+    margin: 2%;
+    background: var(--white);
+    border-radius: 10px;
 }
 
 .sheet-dash {
     width: 100%;
     height: 60vh;
+    background-color: #F2F2F2;
+    display: flex;
+    justify-content: center;
+}
+
+.sheet-dashPro {
+    width: 100%;
     background-color: #F2F2F2;
     display: flex;
     justify-content: center;
@@ -1872,6 +1884,12 @@ textarea[name=pro_content] {
 
 .pp-size {
     top: -35px;
+    width: 150px;
+    position: absolute;
+}
+
+.pp-sizePro {
+    top: -45px;
     width: 150px;
     position: absolute;
 }
@@ -1906,12 +1924,8 @@ textarea[name=pro_content] {
 
 /* DASH PROS */
 
-.dashboardPros {
-    height: 100vh;
-}
-
 .headPros {
-    height: 288px;
+    height: 40vh;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -1940,7 +1954,6 @@ textarea[name=pro_content] {
 .modalProfil, .modalValid {
     display: none;
     width: 410px;
-    /* max-height: 80%; */
     padding: 30px;
     position: absolute;
     top: 50%;
@@ -2023,10 +2036,11 @@ input[type="checkbox"] {
 
 .profil-text {
     text-transform: uppercase;
+    position: relative;
+    margin: 50px 0 20px 0;
 }
 
 .btnmodif {
-    /* width: 13%; */
     font-size: .7875rem;
     line-height: 1.5;
     font-weight: bold;
@@ -2132,6 +2146,7 @@ input[type="checkbox"] {
 
 .btnpros {
     background-color: var(--blue-btn);
+    position: relative;
 }
 
 .btnpros:hover {
@@ -2156,10 +2171,6 @@ input[type="checkbox"] {
 }
 
 /* DISPONIBILITE ============================================= */
-
-/* .dispo{
-    height: 100%;
-} */
 
 .form-dispo-container {
     background-color: var(--blue-btn);
@@ -2204,11 +2215,6 @@ input[type="checkbox"] {
     border-radius: 20px;
     padding: 10px 20px;
 }
-
-/* body.embeddedCalendar{
-    display: flex;
-    justify-content: center;
-} */
 
 /* FACTURE MODAL ================================================ */
 
@@ -2289,13 +2295,6 @@ input[type="checkbox"] {
     margin-bottom: 5px;
 }
 
-/* .facture{ */
-
-/* height: 10%; */
-
-/* width: 10%;
-} */
-
 table, th, td {
     border: 1px solid black;
     padding: 10px 20px;
@@ -2309,7 +2308,6 @@ table, th, td {
 .modalValidReservation {
     display: none;
     width: 40%;
-    max-height: 80%;
     padding: 30px;
     position: absolute;
     top: 50%;
@@ -2330,9 +2328,7 @@ table, th, td {
 
 .form-reservation-container {
     display: flex;
-    /* align-items: center; */
     justify-content: space-between;
-    /* background-color: var(--white-cream); */
 }
 
 .form-reservation {
@@ -2495,9 +2491,6 @@ table, th, td {
     .img-vector-top {
         display: none;
     }
-    /* .btnInfo a.phoneCard, .btnInfo p.price {
-        display: none;
-    } */
     .btn-job {
         margin-bottom: 50px;
     }
@@ -2551,13 +2544,11 @@ table, th, td {
         align-items: center;
         margin-top: 5%;
     }
-    .btnInfo a {
-        margin: 5px 5% 0 0;
-    }
     .sendCard {
         padding: 5px 5px;
     }
     .rightInfoCard {
+        margin-top: 3%;
         width: auto;
     }
     .headSearch {
@@ -2589,6 +2580,12 @@ table, th, td {
         justify-content: space-between;
         height: 100%;
     }
+    .sheet-dashPro {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 100%;
+    }
     .sheet-wrap {
         width: 99%;
     }
@@ -2599,10 +2596,16 @@ table, th, td {
         position: relative;
         margin-bottom: -15%;
     }
+    .pp-sizePro {
+        display: none;
+    }
     .headParents {
         height: 50vh;
     }
     .dash-sheet {
+        margin: 20px;
+    }
+    .dash-sheetPro {
         margin: 20px;
     }
     .dashboardParents {
@@ -2660,9 +2663,6 @@ table, th, td {
     .cardSearch {
         width: 100%;
     }
-    /* .proCard {
-        width: 100%;
-    } */
     #map {
         width: 100%;
     }
