--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -2240,7 +2240,7 @@ input[type="checkbox"] {
     /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 40%;
     /* Could be more or less, depending on screen size */
 }
 
@@ -2299,11 +2299,16 @@ table, th, td {
     border: 1px solid black;
     padding: 10px 20px;
     margin-bottom: 20px;
+    width: 100%;
+    text-align: center;
+}
+.table1{
+    width: 50%;
 }
 
 
 .btn-facture{
-    width: 15%;
+    width: 30%;
 }
 /* PROFIL PARENTS - PROS*/
 
