--- a/base_mvc/public/asset/css/style.css
+++ b/base_mvc/public/asset/css/style.css
@@ -1315,7 +1315,7 @@ textarea[name=pro_content] {
     box-shadow: -8px -4px 8px 0px #ffffff, 8px 4px 12px 0px #d1d9e6;
 }
 
-.toggle-map:checked~.indicator {
+.toggle-state:checked~.indicator {
     transform: translate3d(25%, 0, 0);
 }
 
